--- a/Pages/Registrar.razor
+++ b/Pages/Registrar.razor
@@ -25,10 +25,10 @@
 
               <li class="list"> <h4>Cedula: </h4></li>
               <li class="list"><input type="text"></li>
-              <li class="list"> <h4>Cedula: </h4></li>
+              <li class="list"> <h4> Nacimiento: </h4></li>
               <li class="list"><input type="text"></li>
-              <li class="list"> <h4>Cedula: </h4></li>
-              <li class="list"><input type="text"></li>
+              <li class="list"> <h4>:Vacuna</h4></li>
+              <li class="select"><input type="text"></li>
             </ul>
         
  
