--- a/Pages/Registrar.razor
+++ b/Pages/Registrar.razor
@@ -31,6 +31,10 @@
               <li class="select"><input type="text"></li>
             </ul>
         
+        <ul>
+          <li class="list"> <h4>Provincia</h4></li>
+              <li class="select"><input type="text"></li>
+        </ul>
  
 
      </ul>
