--- a/Pages/Consulta.razor
+++ b/Pages/Consulta.razor
@@ -38,7 +38,7 @@
         
             <tr>
                 
-                <td>valores aqui</td>
+                <td>valores Aqui</td>
                 <td>valores aqui</td>
                 <td>valores aqui</td>
                 <td>valores aqui</td>
